Description
Based on some analysis in https://docs.google.com/document/d/1U1IXS1XD2erZyq8_qG81A1gZaCeHcq2i0unea_eEf5c/edit#heading=h.b98m0h4dgd3w it seems like a major cause of slowness and potential timeouts is that we start issuing memory-pressure rejections at the same limit at which we decide to start flushing data. Given that flushes take some amount of time, and given that they may need to wait for compactions to finish before they get scheduled, we cause a lot of rejections even if we could otherwise keep up with the flush rate.
Attachments
Issue Links
- is related to
-
KUDU-1954 Improve maintenance manager behavior in heavy write workload
-
- Open
-